Added toggle component

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -13,18 +13,21 @@ $-themes: (
     background-accent: #535ab7,
     background-important: #c56c30,
     background-important-alt: #1e9ff2,
+    background-inactive: #545766,
     background-negative: #ff4961,
     background-neutral: #6b6f82,
     background-positive: #28d094,
     background-active-accent: #3f48be,
     background-active-important: #ff7216,
     background-active-important-alt: #0c84d1,
+    background-active-inactive: #484b58,
     background-active-negative: #ff1635,
     background-active-neutral: #545766,
     background-active-positive: #20a576,
     background-hover-accent: #5f64b2,
     background-hover-important: #c77643,
     background-hover-important-alt: #36a9f3,
+    background-hover-inactive: #777b8f,
     background-hover-negative: #ff6377,
     background-hover-neutral: #777b8f,
     background-hover-positive: #39d9a0,
@@ -32,18 +35,20 @@ $-themes: (
     border-important: #b55b1f,
     border-important-alt: #0c84d1,
     border-negative: #ff1635,
+    border-inactive: #484b58,
     border-neutral: #545766,
-    border-normal: #777b8f,
     border-positive: #20a576,
     border-active-accent: #232fde,
     border-active-important: #fc6300,
     border-active-important-alt: #0b75b9,
+    border-active-inactive: #373a44,
     border-active-negative: #fc0021,
     border-active-neutral: #484b58,
     border-active-positive: #20a576,
     border-hover-accent: #3d4291,
     border-hover-important: #ff8230,
     border-hover-important-alt: #0d93e9,
+    border-hover-inactive: #6b6f82,
     border-hover-negative: #ff304b,
     border-hover-neutral: #5f6374,
     border-hover-positive: #24bb85,
@@ -73,37 +78,42 @@ $-themes: (
     background-accent: #666ee8,
     background-important: #ff9149,
     background-important-alt: #1e9ff2,
+    background-inactive: #a7abbd,
     background-negative: #ff4961,
     background-neutral: #6b6f82,
     background-positive: #28d094,
     background-active-accent: #3a44e1,
     background-active-important: #ff7216,
     background-active-important-alt: #0c84d1,
+    background-active-inactive: #777b8f,
     background-active-negative: #ff1635,
     background-active-neutral: #545766,
     background-active-positive: #20a576,
     background-hover-accent: #7c83eb,
     background-hover-important: #ffa063,
     background-hover-important-alt: #36a9f3,
+    background-hover-inactive: #babfc7,
     background-hover-negative: #ff6377,
     background-hover-neutral: #777b8f,
     background-hover-positive: #39d9a0,
     border-accent: #3a44e1,
     border-important: #ff7216,
     border-important-alt: #0c84d1,
+    border-inactive: #777b8f,
     border-negative: #ff1635,
     border-neutral: #545766,
-    border-normal: #babfc7,
     border-positive: #20a576,
     border-active-accent: #232fde,
     border-active-important: #fc6300,
     border-active-important-alt: #0b75b9,
+    border-active-inactive: #545766,
     border-active-negative: #fc0021,
     border-active-neutral: #484b58,
     border-active-positive: #20a576,
     border-hover-accent: #5059e5,
     border-hover-important: #ff8230,
     border-hover-important-alt: #0d93e9,
+    border-hover-inactive: #85899f,
     border-hover-negative: #ff304b,
     border-hover-neutral: #5f6374,
     border-hover-positive: #24bb85,
