--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -15,6 +15,7 @@ $padding-size-large-3: $padding-size-normal * 2.2;
 $padding-size-small: $padding-size-normal * 0.85;
 $padding-size-small-2: $padding-size-normal * 0.65;
 $padding-size-small-3: $padding-size-normal * 0.25;
+$padding-size-small-4: math.div($padding-size-normal, 7);
 $side-menu-width: 260px;
 
 @mixin spacing($rule, $direction, $amount, $property: margin, $additional-properties: ()) {
