--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -1,3 +1,5 @@
 $transition-duration-fast-2: 0.1s;
 $transition-duration-fast: 0.2s;
 $transition-duration-normal: 0.3s;
+$transition-duration-slow: 0.5s;
+$transition-duration-slow-2: 1s;
