--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -72,8 +72,8 @@ $side-menu-width: 260px;
   @include reasonable-spacing('*', '.header', $padding-size-large-3);
   @include reasonable-spacing('*', '.info', $padding-size-large);
   @include reasonable-spacing('.icon', '.info', $padding-size-small-3);
-  @include reasonable-spacing('.info', '*', $padding-size-small-2);
-  @include reasonable-spacing('.info', '.align', $padding-size-small-2);
+  @include reasonable-spacing('.info:not(.spacing-regular)', '*', $padding-size-small-2);
+  @include reasonable-spacing('.info:not(.spacing-regular)', '.align', $padding-size-small-2);
   @include reasonable-spacing('*', '.kpi-distrubution-table', $padding-size-large);
   @include reasonable-spacing('*', '*', $padding-size-normal);
   @include reasonable-spacing('*', '.no-spacing', 0);
