Added daterangepicker component Added calendar component Added grid component Added line bar chart components Added multiselect component Added helper functions for dates and sorting

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -99,7 +99,7 @@ $-themes: (
     border-accent: #3a44e1,
     border-important: #ff7216,
     border-important-alt: #0c84d1,
-    border-inactive: #777b8f,
+    border-inactive: #babfc7,
     border-negative: #ff1635,
     border-neutral: #545766,
     border-positive: #20a576,
