--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -29,3 +29,4 @@ $font-size-large-5: $font-size-normal * 2;
 $font-size-large-6: $font-size-normal * 3;
 $font-size-small: $font-size-normal * 0.9;
 $font-size-small-2: $font-size-normal * 0.75;
+$font-size-small-3: $font-size-normal * 0.5;
