Added dot component Added neutral-alt mood Badges and buttons use accent mood by default instead of important-alt

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -16,6 +16,7 @@ $-themes: (
     background-inactive: #545766,
     background-negative: #ff4961,
     background-neutral: #6b6f82,
+    background-neutral-alt: #903ae1,
     background-positive: #28d094,
     background-active-accent: #3f48be,
     background-active-important: #ff7216,
@@ -23,6 +24,7 @@ $-themes: (
     background-active-inactive: #484b58,
     background-active-negative: #ff1635,
     background-active-neutral: #545766,
+    background-active-neutral-alt: #7e29ce,
     background-active-positive: #20a576,
     background-hover-accent: #5f64b2,
     background-hover-important: #c77643,
@@ -30,6 +32,7 @@ $-themes: (
     background-hover-inactive: #777b8f,
     background-hover-negative: #ff6377,
     background-hover-neutral: #777b8f,
+    background-hover-neutral-alt: #9a4ce2,
     background-hover-positive: #39d9a0,
     border-accent: #313572,
     border-important: #b55b1f,
@@ -37,6 +40,7 @@ $-themes: (
     border-negative: #ff1635,
     border-inactive: #484b58,
     border-neutral: #545766,
+    border-neutral-alt: #7e29ce,
     border-positive: #20a576,
     border-active-accent: #232fde,
     border-active-important: #fc6300,
@@ -44,6 +48,7 @@ $-themes: (
     border-active-inactive: #373a44,
     border-active-negative: #fc0021,
     border-active-neutral: #484b58,
+    border-active-neutral-alt: #6f27b1,
     border-active-positive: #20a576,
     border-hover-accent: #3d4291,
     border-hover-important: #ff8230,
@@ -51,6 +56,7 @@ $-themes: (
     border-hover-inactive: #6b6f82,
     border-hover-negative: #ff304b,
     border-hover-neutral: #5f6374,
+    border-hover-neutral-alt: #7e29ce,
     border-hover-positive: #24bb85,
     shadow-normal: rgba(black, 10%),
     text-normal: #a7abbd,
@@ -63,6 +69,7 @@ $-themes: (
     text-important-alt: #1e9ff2,
     text-negative: #ff4961,
     text-neutral: #6b6f82,
+    text-neutral-alt: #903ae1,
     text-positive: #28d094,
     white: white,
   ),
@@ -81,6 +88,7 @@ $-themes: (
     background-inactive: #a7abbd,
     background-negative: #ff4961,
     background-neutral: #6b6f82,
+    background-neutral-alt: #903ae1,
     background-positive: #28d094,
     background-active-accent: #3a44e1,
     background-active-important: #ff7216,
@@ -88,6 +96,7 @@ $-themes: (
     background-active-inactive: #777b8f,
     background-active-negative: #ff1635,
     background-active-neutral: #545766,
+    background-active-neutral-alt: #7e29ce,
     background-active-positive: #20a576,
     background-hover-accent: #7c83eb,
     background-hover-important: #ffa063,
@@ -95,6 +104,7 @@ $-themes: (
     background-hover-inactive: #babfc7,
     background-hover-negative: #ff6377,
     background-hover-neutral: #777b8f,
+    background-hover-neutral-alt: #9a4ce2,
     background-hover-positive: #39d9a0,
     border-accent: #3a44e1,
     border-important: #ff7216,
@@ -102,6 +112,7 @@ $-themes: (
     border-inactive: #babfc7,
     border-negative: #ff1635,
     border-neutral: #545766,
+    border-neutral-alt: #7e29ce,
     border-positive: #20a576,
     border-active-accent: #232fde,
     border-active-important: #fc6300,
@@ -109,6 +120,7 @@ $-themes: (
     border-active-inactive: #545766,
     border-active-negative: #fc0021,
     border-active-neutral: #484b58,
+    border-active-neutral-alt: #6f27b1,
     border-active-positive: #20a576,
     border-hover-accent: #5059e5,
     border-hover-important: #ff8230,
@@ -116,6 +128,7 @@ $-themes: (
     border-hover-inactive: #85899f,
     border-hover-negative: #ff304b,
     border-hover-neutral: #5f6374,
+    border-hover-neutral-alt: #7e29ce,
     border-hover-positive: #24bb85,
     shadow-normal: rgba(black, 10%),
     text-normal: #6b6f82,
@@ -128,6 +141,7 @@ $-themes: (
     text-important-alt: #1e9ff2,
     text-negative: #ff4961,
     text-neutral: #6b6f82,
+    text-neutral-alt: #903ae1,
     text-positive: #28d094,
     white: white,
   ),
