Improved dark theme colors

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,54 +10,54 @@ $-themes: (
     background-elevated-3: #373a44,
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
-    background-accent: #535ab7,
-    background-important: #c56c30,
-    background-important-alt: #1e9ff2,
+    background-accent: #4a50aa,
+    background-important: #d16b27,
+    background-important-alt: #0c84d1,
     background-inactive: #545766,
-    background-negative: #ff4961,
-    background-neutral: #6b6f82,
-    background-neutral-alt: #903ae1,
-    background-positive: #28d094,
-    background-active-accent: #3f48be,
-    background-active-important: #ff7216,
-    background-active-important-alt: #0c84d1,
+    background-negative: #cc1a31,
+    background-neutral: #545766,
+    background-neutral-alt: #6b1eb3,
+    background-positive: #20a576,
+    background-active-accent: #3b4194,
+    background-active-important: #c56322,
+    background-active-important-alt: #0e77b8,
     background-active-inactive: #484b58,
-    background-active-negative: #ff1635,
-    background-active-neutral: #545766,
-    background-active-neutral-alt: #7e29ce,
-    background-active-positive: #20a576,
-    background-hover-accent: #5f64b2,
-    background-hover-important: #c77643,
-    background-hover-important-alt: #36a9f3,
+    background-active-negative: #c50d25,
+    background-active-neutral: #4a4c5a,
+    background-active-neutral-alt: #5d15a0,
+    background-active-positive: #1e8460,
+    background-hover-accent: #555cb8,
+    background-hover-important: #e17831,
+    background-hover-important-alt: #138fdc,
     background-hover-inactive: #777b8f,
-    background-hover-negative: #ff6377,
-    background-hover-neutral: #777b8f,
-    background-hover-neutral-alt: #9a4ce2,
-    background-hover-positive: #39d9a0,
-    border-accent: #313572,
+    background-hover-negative: #da2840,
+    background-hover-neutral: #6b6f82,
+    background-hover-neutral-alt: #7627c0,
+    background-hover-positive: #1fb17e,
+    border-accent: #3b4194,
     border-important: #b55b1f,
-    border-important-alt: #0c84d1,
-    border-negative: #ff1635,
+    border-important-alt: #0e77b8,
+    border-negative: #c50d25,
     border-inactive: #484b58,
-    border-neutral: #545766,
-    border-neutral-alt: #7e29ce,
-    border-positive: #20a576,
-    border-active-accent: #232fde,
-    border-active-important: #fc6300,
-    border-active-important-alt: #0b75b9,
+    border-neutral: #4a4c5a,
+    border-neutral-alt: #5d15a0,
+    border-positive: #1e8460,
+    border-active-accent: #3b4194,
+    border-active-important: #b55b1f,
+    border-active-important-alt: #0e77b8,
     border-active-inactive: #373a44,
-    border-active-negative: #fc0021,
-    border-active-neutral: #484b58,
-    border-active-neutral-alt: #6f27b1,
-    border-active-positive: #20a576,
-    border-hover-accent: #3d4291,
-    border-hover-important: #ff8230,
-    border-hover-important-alt: #0d93e9,
+    border-active-negative: #c50d25,
+    border-active-neutral: #4a4c5a,
+    border-active-neutral-alt: #5d15a0,
+    border-active-positive: #1e8460,
+    border-hover-accent: #3b4194,
+    border-hover-important: #b55b1f,
+    border-hover-important-alt: #0e77b8,
     border-hover-inactive: #6b6f82,
-    border-hover-negative: #ff304b,
-    border-hover-neutral: #5f6374,
-    border-hover-neutral-alt: #7e29ce,
-    border-hover-positive: #24bb85,
+    border-hover-negative: #c50d25,
+    border-hover-neutral: #4a4c5a,
+    border-hover-neutral-alt: #5d15a0,
+    border-hover-positive: #1e8460,
     shadow-normal: rgba(black, 10%),
     text-normal: #a7abbd,
     text-elevated: #dcdcdc,
