Updated inactive background color

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -13,7 +13,7 @@ $-themes: (
     background-accent: #4a50aa,
     background-important: #d16b27,
     background-important-alt: #0c84d1,
-    background-inactive: #545766,
+    background-inactive: #4a4c5a,
     background-negative: #cc1a31,
     background-neutral: #545766,
     background-neutral-alt: #6b1eb3,
@@ -21,7 +21,7 @@ $-themes: (
     background-active-accent: #3b4194,
     background-active-important: #c56322,
     background-active-important-alt: #0e77b8,
-    background-active-inactive: #484b58,
+    background-active-inactive: #42444f,
     background-active-negative: #c50d25,
     background-active-neutral: #4a4c5a,
     background-active-neutral-alt: #5d15a0,
@@ -29,7 +29,7 @@ $-themes: (
     background-hover-accent: #555cb8,
     background-hover-important: #e17831,
     background-hover-important-alt: #138fdc,
-    background-hover-inactive: #777b8f,
+    background-hover-inactive: #545766,
     background-hover-negative: #da2840,
     background-hover-neutral: #6b6f82,
     background-hover-neutral-alt: #7627c0,
@@ -38,14 +38,14 @@ $-themes: (
     border-important: #b55b1f,
     border-important-alt: #0e77b8,
     border-negative: #c50d25,
-    border-inactive: #484b58,
+    border-inactive: #272932,
     border-neutral: #4a4c5a,
     border-neutral-alt: #5d15a0,
     border-positive: #1e8460,
     border-active-accent: #3b4194,
     border-active-important: #b55b1f,
     border-active-important-alt: #0e77b8,
-    border-active-inactive: #373a44,
+    border-active-inactive: #272932,
     border-active-negative: #c50d25,
     border-active-neutral: #4a4c5a,
     border-active-neutral-alt: #5d15a0,
@@ -53,7 +53,7 @@ $-themes: (
     border-hover-accent: #3b4194,
     border-hover-important: #b55b1f,
     border-hover-important-alt: #0e77b8,
-    border-hover-inactive: #6b6f82,
+    border-hover-inactive: #272932,
     border-hover-negative: #c50d25,
     border-hover-neutral: #4a4c5a,
     border-hover-neutral-alt: #5d15a0,
