Fixed input size

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -85,7 +85,7 @@ $-themes: (
     background-accent: #666ee8,
     background-important: #ff9149,
     background-important-alt: #1e9ff2,
-    background-inactive: #a7abbd,
+    background-inactive: #f4f5fa,
     background-negative: #ff4961,
     background-neutral: #6b6f82,
     background-neutral-alt: #903ae1,
