Added 21 colors support for line bar charts

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -59,6 +59,27 @@ $-themes: (
     border-hover-neutral: #4a4c5a,
     border-hover-neutral-alt: #5d15a0,
     border-hover-positive: #1e8460,
+    chart-1: #ff9149,
+    chart-2: #1e9ff2,
+    chart-3: #28d094,
+    chart-4: #666ee8,
+    chart-5: #ffc107,
+    chart-6: #464855,
+    chart-7: #d02864,
+    chart-8: #d39e00,
+    chart-9: #9ff21e,
+    chart-10: #2f376c,
+    chart-11: #e8e066,
+    chart-12: #babfc7,
+    chart-13: #e8666e,
+    chart-14: #1ef2db,
+    chart-15: #554650,
+    chart-16: #ff4961,
+    chart-17: #46554c,
+    chart-18: #e83e8c,
+    chart-19: #e49764,
+    chart-20: #4297ce,
+    chart-21: #4dab89,
     shadow-normal: rgba(black, 10%),
     text-contrast: white,
     text-normal: #a7abbd,
@@ -133,6 +154,27 @@ $-themes: (
     border-hover-neutral: #5f6374,
     border-hover-neutral-alt: #7e29ce,
     border-hover-positive: #24bb85,
+    chart-1: #ff9149,
+    chart-2: #1e9ff2,
+    chart-3: #28d094,
+    chart-4: #666ee8,
+    chart-5: #ffc107,
+    chart-6: #464855,
+    chart-7: #d02864,
+    chart-8: #d39e00,
+    chart-9: #9ff21e,
+    chart-10: #2f376c,
+    chart-11: #e8e066,
+    chart-12: #babfc7,
+    chart-13: #e8666e,
+    chart-14: #1ef2db,
+    chart-15: #554650,
+    chart-16: #ff4961,
+    chart-17: #46554c,
+    chart-18: #e83e8c,
+    chart-19: #e49764,
+    chart-20: #4297ce,
+    chart-21: #4dab89,
     shadow-normal: rgba(black, 10%),
     text-contrast: black,
     text-normal: #6b6f82,
