--- a/src/styles/shadows.scss
+++ b/src/styles/shadows.scss
@@ -5,14 +5,21 @@ $-shadow-base-size: 14px;
 
 $-shadows: (
   card: 0 $-shadow-base-size * 0.5 $-shadow-base-size,
+  dragged: 0 $-shadow-base-size * 0.25 $-shadow-base-size * 0.5,
   large: 0 0 $-shadow-base-size * 2,
   large-header: 0 (-$-shadow-base-size * 2) $-shadow-base-size * 2 $-shadow-base-size * 2,
 );
 
 @mixin apply-shadow($shadow-size) {
+  $-prefix: map.get($-shadows, $shadow-size);
+
+  @if $-prefix == null {
+    @error "Shadow `#{$shadow-size}` not found.";
+  }
+
   @include apply-color(
     box-shadow,
     shadow-normal,
-    $value-prefix: map.get($-shadows, $shadow-size),
+    $value-prefix: $-prefix,
   );
 }
