HUB-120 fixed colors in table rows

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,6 +10,8 @@ $-themes: (
     background-normal: #272932,
     background-elevated-2: #31343d,
     background-elevated-3: #373a44,
+    background-row-even: #272932,
+    background-row-odd: #31343d,
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
     background-accent: #4a50aa,
@@ -107,6 +109,8 @@ $-themes: (
     background-normal: #f4f5fa,
     background-elevated-2: #f7f7f7,
     background-elevated-3: white,
+    background-row-even: #fafbfd,
+    background-row-odd: #f6f6f7,
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
     background-accent: #666ee8,
