HUB-106 changed colors in dark mode

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -42,7 +42,7 @@ $-themes: (
     border-important: #b55b1f,
     border-important-alt: #0e77b8,
     border-negative: #c50d25,
-    border-inactive: #272932,
+    border-inactive: #6b6f82,
     border-neutral: #4a4c5a,
     border-neutral-alt: #5d15a0,
     border-positive: #1e8460,
@@ -84,6 +84,14 @@ $-themes: (
     chart-19: #e49764,
     chart-20: #4297ce,
     chart-21: #4dab89,
+    line-chart-accent: #4a50aa,
+    line-chart-important: #d16b27,
+    line-chart-important-alt: #0c84d1,
+    line-chart-negative: #cc1a31,
+    line-chart-neutral: #f4f5fa,
+    line-chart-neutral-alt: #6b1eb3,
+    line-chart-positive: #20a576,
+    placeholder: #babfc7,
     shadow-normal: rgba(black, 10%),
     text-contrast: white,
     text-normal: #a7abbd,
@@ -183,6 +191,14 @@ $-themes: (
     chart-19: #e49764,
     chart-20: #4297ce,
     chart-21: #4dab89,
+    line-chart-accent: #666ee8,
+    line-chart-important: #ff9149,
+    line-chart-important-alt: #1e9ff2,
+    line-chart-negative: #ff4961,
+    line-chart-neutral: #6b6f82,
+    line-chart-neutral-alt: #903ae1,
+    line-chart-positive: #28d094,
+    placeholder: #babfc7,
     shadow-normal: rgba(black, 10%),
     text-contrast: black,
     text-normal: #6b6f82,
