HUB-123 fixed datepicker

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -14,7 +14,10 @@ $-themes: (
     background-row-odd: #31343d,
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
+    background-list-accent: #4a50aa,
+    background-list-lowered: #F0F4FF,
     background-accent: #4a50aa,
+    background-accent-lowered: #4a50aa,
     background-important: #d16b27,
     background-important-alt: #0c84d1,
     background-inactive: #4a4c5a,
@@ -94,6 +97,7 @@ $-themes: (
     placeholder: #babfc7,
     shadow-normal: rgba(black, 10%),
     text-contrast: white,
+    text-contrast-opposite: black,
     text-normal: #a7abbd,
     text-elevated: #dcdcdc,
     text-elevated-2: #f6f6f6,
@@ -121,7 +125,10 @@ $-themes: (
     background-row-odd: #f6f6f7,
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
+    background-list-accent: #447ef1,
+    background-list-lowered: #F0F4FF,
     background-accent: #666ee8,
+    background-accent-lowered: #A9BDFC,
     background-important: #ff9149,
     background-important-alt: #1e9ff2,
     background-inactive: #f4f5fa,
@@ -201,6 +208,7 @@ $-themes: (
     placeholder: #babfc7,
     shadow-normal: rgba(black, 10%),
     text-contrast: black,
+    text-contrast-opposite: white,
     text-normal: #6b6f82,
     text-elevated: #dcdcdc,
     text-elevated-2: #f6f6f6,
