--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,25 +1,11 @@
-@import '@fontsource/open-sans/400.css';
-@import '@fontsource/open-sans/500.css';
-@import '@fontsource/open-sans/600.css';
-@import '@fontsource/open-sans/700.css';
-
-@font-face {
-  font-family: 'Magistral Book';
-  src: url('https://db.onlinewebfonts.com/t/90ca58f744f7cb5ecf0d8d2ace2a6a86.eot');
-  src: url('https://db.onlinewebfonts.com/t/90ca58f744f7cb5ecf0d8d2ace2a6a86.eot?#iefix')
-      format('embedded-opentype'),
-    url('https://db.onlinewebfonts.com/t/90ca58f744f7cb5ecf0d8d2ace2a6a86.woff2') format('woff2'),
-    url('https://db.onlinewebfonts.com/t/90ca58f744f7cb5ecf0d8d2ace2a6a86.woff') format('woff'),
-    url('https://db.onlinewebfonts.com/t/90ca58f744f7cb5ecf0d8d2ace2a6a86.ttf') format('truetype'),
-    url('https://db.onlinewebfonts.com/t/90ca58f744f7cb5ecf0d8d2ace2a6a86.svg#MagistralW01-Book')
-      format('svg');
-}
+//@import '@fontsource/open-sans/400.css';
+//@import '@fontsource/open-sans/500.css';
+//@import '@fontsource/open-sans/600.css';
+//@import '@fontsource/open-sans/700.css';
 
 $-font-family-fallback: Helvetica, Arial, sans-serif;
-$-font-magistral-book: 'Magistral Book';
 $-font-open-sans: 'Open Sans';
 
-$font-family-brand-text: $-font-magistral-book, $-font-family-fallback;
 $font-family-normal: $-font-open-sans, $-font-family-fallback;
 
 $font-size-normal: 14px;
