--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -4,6 +4,7 @@
 @use '../radius.scss' as *;
 
 @forward 'element-plus/theme-chalk/src/common/var.scss' with (
+
 // Colors
   $colors: (
     'primary': (
@@ -42,6 +43,7 @@
   ),
   $select-option:(
     'hover-background': var(--el-fill-color-light),
+    'selected-text-color': map.get(map.get($themes, 'light'), white),
   ),
   $select-group: (
     'font-size': $font-size-normal,
