TRACKAD-7317 fixes for vue2 - vue3 migration

--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -53,4 +53,8 @@
   $popper: (
     'border-radius': $border-radius-normal,
   ),
+  $popover: (
+    'border-radius': $border-radius-normal,
+    'title-font-size': $font-size-normal,
+  ),
 );
