HUB-170 icons refactoring

--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@use '../fonts.scss' as *;
+@use '../fonts/base.scss' as *;
 @use '../colors.scss' as *;
 @use '../radius.scss' as *;
 
